--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,15 @@
 <div class="container">
   <div class="row">
-    <% 10.times do |_|  %>
+    <% @services do |service|  %>
       <div class="col-4">
         <div class="card mb-3">
           <img class="card-img-top" src="https://cdn2.unrealengine.com/Diesel%2Fproductv2%2Fbatman-arkham-knight%2FEGS_WB_Batman_Arkham_Knight_G1_1920x1080_19_0911-1920x1080-1d69e15f00cb5ab57249f208f1f8f45d52cbbc59.jpg" alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title"><%= service.title %></h5>
+            <p class="card-text"><%= service.user %></p>
+            <p class="card-text"><%= service.price_day %>/day</p>
+            <p class="card-text"><%= service.location %></p>
+            <p class="card-text"><%= service.user %></p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
