--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar fixed-top border-bottom navbar-expand-sm navbar-mysuperapp ">
+<div class="navbar navbar-mysuperapp fixed-top border-bottom navbar-expand-sm ">
   <div class="container-fluid ">
 
     <%= link_to root_path, class: "navbar-brand" do %>
