--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
-.navbar-mysuper {
+.navbar-mysuperapp {
   justify-content: space-between;
-  background: #f4f4f4;
+  background-color: #f4f4f4;
+  padding: 15px;
 }
 
 .navbar-mysuperapp .navbar-collapse {
@@ -9,9 +10,4 @@
 
 .navbar-mysuperapp .navbar-brand img {
   width: 60px;
-}
-
-.navbar {
-  background-color: #f4f4f4;
-  padding: 15px;
 }
