--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,1 +1,52 @@
-<h1>Hello</h1>
+<div class="w-75 container flex-column">
+  <div class="row mt-4">
+    <h1> <%= @service.title %></h1>
+  </div>
+  <div class="d-flex justify-content">
+    <h6 class="me-5"> <i class="fa-solid fa-star"></i> <%= @service.user.rating %></h6>
+    <h6> <i class="fa-solid fa-location-dot"></i> <%= @service.location %></h6>
+  </div>
+
+  <div class="mt-4">
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="https://fr.web.img3.acsta.net/newsv7/19/01/25/18/47/0374190.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="https://www.pause-canap.com/media/wysiwyg/superman.png" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="https://cdn.futura-sciences.com/buildsv6/images/largeoriginal/d/f/0/df03d75517_50143751_228.jpg" alt="Third slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+
+
+  <div class="row mt-4 w-75">
+    <div class="d-flex justify-content-between mb-2">
+      <div class="d-flex align-item-center">
+      <h6 class="me-5 m-auto"> <i class="fa-solid fa-mask"></i> <%= @service.user.alias %> </h6>
+      <h6 class="m-auto"> <i class="fa-solid fa-hand-sparkles"></i> <%= @service.user.power.capitalize %></h6>
+      </div>
+      <%= image_tag "https://www.gala.fr/imgre/fit/http.3A.2F.2Fprd2-bone-image.2Es3-website-eu-west-1.2Eamazonaws.2Ecom.2Fgal.2Fvar.2Fgal.2Fstorage.2Fimages.2Fmedia.2Fmultiupload_du_18_juin_2013.2Fsuperman.2F2209253-1-fre-FR.2Fsuperman.2Ejpg/420x420/quality/80/man-of-steel-superman-d-un-s-qui-veut-dire.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+    </div>
+
+    <hr>
+    <h2>Description :</h2>
+    <p><%= @service.content %></p>
+    <hr>
+    <h6> <i class="fa-sharp fa-solid fa-calendar"></i> <%= @service.created_at.to_date %></h5>
+    <p><%= @service.price_day %>€</p>
+    <button type="button btn-sm" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Réserver</button>
+  </div>
+</div>
