--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -4,6 +4,7 @@
   <div class="row">
     <% @services.each do |service|  %>
       <div class="col-4">
+        <%= link_to service_path(service), class: 'text-decoration-none text-black' do %>
         <div class="card mb-3">
           <img class="card-img-top" src="https://cdn2.unrealengine.com/Diesel%2Fproductv2%2Fbatman-arkham-knight%2FEGS_WB_Batman_Arkham_Knight_G1_1920x1080_19_0911-1920x1080-1d69e15f00cb5ab57249f208f1f8f45d52cbbc59.jpg" alt="Card image cap">
           <div class="card-body">
@@ -15,6 +16,7 @@
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
+        <% end %>
       </div>
       <% end  %>
   </div>
