--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -7,29 +7,27 @@
     <h6> <i class="fa-solid fa-location-dot"></i> <%= @service.location %></h6>
   </div>
 
-  <div class="mt-4">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="https://fr.web.img3.acsta.net/newsv7/19/01/25/18/47/0374190.jpg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://www.pause-canap.com/media/wysiwyg/superman.png" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="https://cdn.futura-sciences.com/buildsv6/images/largeoriginal/d/f/0/df03d75517_50143751_228.jpg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+  <div id="carouselExample" class="carousel slide mt-4">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://fr.web.img3.acsta.net/newsv7/19/01/25/18/47/0374190.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.pause-canap.com/media/wysiwyg/superman.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://cdn.futura-sciences.com/buildsv6/images/largeoriginal/d/f/0/df03d75517_50143751_228.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
 
   <div class="row mt-4 w-75">
