correction du code pour les boutons edit et suppr

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -57,9 +57,9 @@
     <% end %>
   <hr>
 
-    <div>
+    <div class="">
       <h1 class="mb-4">Make a reservation</h1>
       <%= render "reservations/form", service: @service, reservation: @reservation %>
-  </div>
+    </div>
 
 </div>
