fixed models validations and updated new and edit user view

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,11 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :role %>
+    <%= f.input :alias %>
+    <%= f.input :power %>
   </div>
 
   <div class="form-actions">
