--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -29,7 +29,7 @@
 
               <%= link_to "Profil", 'user_path(current_user)', class: "dropdown-item" %>
               <%= link_to "Index", services_path, class: "dropdown-item" %>
-              <%= link_to "My reservations",  service_reservations_path([:service_id]), class: "dropdown-item" %>
+              <%= link_to "My reservations",  reservations_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
             </div>
           </li>
