--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -9,15 +9,11 @@
 
   <div id="carouselExample" class="carousel slide mt-4">
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://fr.web.img3.acsta.net/newsv7/19/01/25/18/47/0374190.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://www.pause-canap.com/media/wysiwyg/superman.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://cdn.futura-sciences.com/buildsv6/images/largeoriginal/d/f/0/df03d75517_50143751_228.jpg" class="d-block w-100" alt="...">
-    </div>
+    <% @service.photos.each do |photo| %>
+      <div class="carousel-item active">
+        <%= cl_image_tag photo.key, height: 720, width: 1280, crop: :fill, class: "d-block" %>
+      </div>
+    <% end %>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
