--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -23,14 +23,14 @@
         <% end %>
 
   <div class="row">
-   <h1 class="pt-4 pb-4">My reservations :</h1>
+   <h1 class="pt-4 pb-4">My bookings :</h1>
         <% @services.each do |service| %>
           <% service.reservations.each do |reservation| %>
           <div class="col-4">
             <div class="card mb-3">
               <div class="card-body">
               <h5 class="card-text"><%= reservation.service.title %></h5>
-              <p class="card-text"> <i class="fa-solid fa-mask"></i> <%= reservation.service.user.alias %></p>
+              <p class="card-text"> <i class="fa-solid fa-mask"></i> <%= reservation.user.first_name %> <%= reservation.user.last_name %></p>
               <p class="card-text"> <i class="fa-sharp fa-solid fa-calendar"></i> <%= reservation.start_at %> - <%= reservation.end_at %></p>
               <p class="card-text"> <i class="fa-solid fa-location-dot"></i> <%= reservation.address %></p>
               <p class="card-text border p-1  "><i class="fa-solid fa-message"></i> <%= reservation.message %></p>
