--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,10 +28,10 @@
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 
 
-              <%= link_to "Profil", user_path(current_user.id), class: "dropdown-item" %>
-              <%= link_to "Index", services_path, class: "dropdown-item" %>
-              <%= link_to "My reservations",  reservations_path, class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
+              <%= link_to "My Profil", user_path(current_user.id), class: "dropdown-item" %>
+              <%= link_to "My Services", services_path, class: "dropdown-item" %>
+              <%= link_to "My Reservations",  reservations_path, class: "dropdown-item" %>
+              <%= link_to "Log Out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
             </div>
           </li>
         <% else %>
