--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <% @services.each do |service|  %>
       <div class="col-4">
         <%= link_to service_path(service), class: 'text-decoration-none text-black' do %>
-        <div class="card mb-3">
+        <div class="card mb-3 shadow-sm p-3 mb-5 bg-white rounded">
           <img class="card-img-top" src="https://cdn2.unrealengine.com/Diesel%2Fproductv2%2Fbatman-arkham-knight%2FEGS_WB_Batman_Arkham_Knight_G1_1920x1080_19_0911-1920x1080-1d69e15f00cb5ab57249f208f1f8f45d52cbbc59.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title"><%= service.title %></h5>
