--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer border-top shadow rounded">
   <div class="footer-links">
     <a href="#"><i class="fab fa-github"></i></a>
     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -6,6 +6,5 @@
     <a href="#"><i class="fab fa-twitter"></i></a>
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
-  <div class="footer-copyright">
-    tema le pure footer  <i class="fas fa-heart"></i> by SuperMoi
-  </div>
+  <%# <div class="footer-copyright">
+  </div> %>
