--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -6,7 +6,7 @@
       <div class="col-4">
         <%= link_to service_path(service), class: 'text-decoration-none text-black' do %>
         <div class="card mb-3">
-          <img class="card-img-top" src="https://cdn2.unrealengine.com/Diesel%2Fproductv2%2Fbatman-arkham-knight%2FEGS_WB_Batman_Arkham_Knight_G1_1920x1080_19_0911-1920x1080-1d69e15f00cb5ab57249f208f1f8f45d52cbbc59.jpg" alt="Card image cap">
+          <%= cl_image_tag (service.photos[0].present? ? service.photos[0].key : "logo.png"), class: "card-img-top" %>
           <div class="card-body">
             <h5 class="card-title"><%= service.title %></h5>
             <h5 class="card-title"><%= service.content %></h5>
