--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,5 +7,5 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
-    tema le pure footer  <i class="fas fa-heart"></i> by SuperMoi
+    Made with <i class="fas fa-heart"></i> by SuperJean
   </div>
