--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,9 @@
-<div class="navbar navbar-mysuperapp fixed-top border-bottom navbar-expand-sm ">
+<div class="navbar navbar-mysuperapp fixed-top border-bottom navbar-expand-sm">
   <div class="container-fluid ">
     <div class="d-flex align-items-center navbar-nav">
     <%= link_to root_path, class: "navbar-brand nav-item active" do %>
-      <%= image_tag "https://www.ecranlarge.com/uploads/image/001/021/deadpool-photo-1021856.jpeg" %>
+      <%= cl_image_tag "logo.png", class: "" %>
+
     <% end %>
     <%= link_to "Home", root_path, class: "nav-link" %>
     </div>
@@ -24,7 +25,8 @@
           </li>
 
           <li class="nav-item dropdown">
-            <%= image_tag "https://www.ecranlarge.com/uploads/image/001/021/deadpool-photo-1021856.jpeg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= cl_image_tag (current_user.photo.present? ? current_user.photo.key : "logo.png"), class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 
 
