--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<div class="container w-50 my-5 p-5 border rounded shadow">
+<h2><i class="fa-solid fa-mask"></i> Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -17,15 +18,17 @@
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :first_name %>
     <%= f.input :last_name %>
-    <%= f.input :role %>
+    <%= f.input :role, collection: ['Superhero', 'Human'] %>
     <%= f.input :alias %>
     <%= f.input :power %>
     <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Sign up", class:"btn btn-primary w-100" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
