--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -1,4 +1,4 @@
-<div class="w-75 container flex-column">
+<div class="w-75 container flex-column border rounded shadow mb-4 p-4">
   <div class="row mt-4">
     <h1> <%= @service.title %></h1>
   </div>
