--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,7 @@ body {
   margin: 0;
   font-family: 'Varela Round', sans-serif;
   font-size: 18px;
-  background: #F4F4F4;
+  background: $back;
 }
 
 .padded {
