--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 
-<div class="navbar navbar-mysuperapp fixed-top border-bottom navbar-expand-sm shadow-sm p-3 mb-5 bg-white rounded">
+<div class="navbar navbar-mysuperapp fixed-top border-bottom navbar-expand-sm p-3 mb-5 rounded">
   <div class="container-fluid ">
     <div class="d-flex align-items-center navbar-nav">
     <%= link_to root_path, class: "navbar-brand nav-item active" do %>
