--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,22 +1,6 @@
 <div class="container">
   <div class="row">
-    <% @services.each do |service|  %>
-      <div class="col-4">
-        <%= link_to service_path(service), class: 'text-decoration-none text-black' do %>
-        <div class="card mb-3 shadow-sm p-3 mb-5 bg-white rounded">
-          <%= cl_image_tag (service.photos[0].present? ? service.photos[0].key : "logo.png"), height: 400, width: 400, crop: :fill, :gravity=>"auto", class: "card-img-top" %>
-          <div class="card-body">
-            <h5 class="card-title"><%= service.title %></h5>
-            <h5 class="card-title"><%= service.content %></h5>
-            <p class="card-text"><%= service.user.alias %></p>
-            <p class="card-text"><%= service.price_day %>€/day</p>
-            <p class="card-text"><%= service.location %></p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <% end %>
-      </div>
-      <% end  %>
+    <%= render "shared/service_cards", service: @service %>
   </div>
 </div>
 
