ajout de la map dans la show du service

--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -64,4 +64,10 @@
       <%= render "reservations/form", service: @service, reservation: @reservation %>
     </div>
 
+  <div style="width: 40%; height: 300px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+
 </div>
