--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,8 +5,17 @@ background-color: $card;
 .card {
   border-radius: 2rem;
   box-shadow: 10px 10px 20px 0px rgba(217,208,208,0.38);
+  height: 748px;
+}
+
+.card-body > h5 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 10em;
+  text-align: justify;
 }
 
 .card-img-top {
   border-radius: 2rem;
+  height: 380px;
 }
