--- a/app/views/pages/profil.html.erb
+++ b/app/views/pages/profil.html.erb
@@ -16,12 +16,7 @@
         </div>
       </div>
     </div>
-      <p>Hey there, it's your friendly neighborhood Spider-Man, and I'm excited to offer my services through this rental app. <br>
-          As a spider-powered hero, I have the ability to climb walls, swing through the air, and sense danger before it happens. I'm also incredibly agile and have lightning-fast reflexes, making me a force to be reckoned with in combat.<br>
-          In addition to my physical abilities, I'm a quick thinker and have a great sense of humor. I use these qualities to stay one step ahead of my enemies and keep the people of New York City safe.<br>
-          If you need help stopping a bank robbery, rescuing a kitten from a tree, or just need someone to lend a hand, I'm your guy. Just reach out to me through this app, and I'll be there in a flash.<br>
-          Please note that while I like to have fun and crack jokes, I take my responsibilities as a hero very seriously. I always put the safety of others first and will do whatever it takes to protect innocent people from harm.<br>
-          Thank you for considering me for your rental needs, and I look forward to working with you to make New York City a safer and better place for everyone.</p>
+     <p><%= @user.description %></p>
     </div>
     <% if @user == current_user %>
       <p><strong>Email:</strong> <%= @user.email %></p>
