added validation system for reservation, still bug with view

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-controller="reservation-validation">
   <div class="row">
     <h1 class="pb-4">My reservations :</h1>
     <% @reservations.each do |reservation| %>
@@ -10,9 +10,6 @@
             <p class="card-text"> <i class="fa-sharp fa-solid fa-calendar"></i> <%= reservation.start_at %> - <%= reservation.end_at %></p>
             <p class="card-text"> <i class="fa-solid fa-location-dot"></i> <%= reservation.address %></p>
             <p class="card-text border p-1  "><i class="fa-solid fa-message"></i> <%= reservation.message %></p>
-            <% if policy(Reservation).edit? %>
-              <%= link_to "Edit this reservation", edit_service_reservation_path(reservation.service, reservation) %> |
-            <% end %>
             <%if policy(Reservation).destroy? %>
               <%= link_to reservation_path(reservation), data: {turbo_method: :delete, turbo_confirm: "Are you sure ?"} do %>
               Destroy this reservation
@@ -37,11 +34,19 @@
               <p class="card-text"> <i class="fa-sharp fa-solid fa-calendar"></i> <%= reservation.start_at %> - <%= reservation.end_at %></p>
               <p class="card-text"> <i class="fa-solid fa-location-dot"></i> <%= reservation.address %></p>
               <p class="card-text border p-1  "><i class="fa-solid fa-message"></i> <%= reservation.message %></p>
+              <div data-reservation-validation-target="accepted" class=<%= reservation.accepted ? "d-none" : "hello" %> >
               <% if policy(Reservation).edit? %>
-                <%= link_to "Edit this reservation", edit_service_reservation_path(service, reservation) %> |
+                <%= simple_form_for([reservation.service, reservation], data: { reservation_validation_target: "form", action: "submit->reservation-validation#send" })  do |f| %>
+                  <%= f.submit label: "Accept this reservation?"%>
+                <% end %>
               <% end %>
+              </div>
+              <div class=<%= reservation.accepted ? "hello" : "d-none" %> data-reservation-validation-target="accepted">
+                Reservation accepted
+              </div>
+
               <%if policy(Reservation).destroy? %>
-                <%= link_to reservation_path(reservation), data: {turbo_method: :delete, turbo_confirm: "Are you sure ?"} do %>
+                <%= link_to reservation_path(reservation), data: {turbo_method: :delete, turbo_confirm: "Are you sure ?"}, class: "btn btn-danger" do %>
                 Destroy this reservation <% end %>
               <% end %>
             </div>
